注册中心初步实现

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,52 @@
-### Java template
-# Compiled class file
-*.class
-.idea
+# 编译输出文件
+target/
+build/
+out/
+bin/
+dist/
 
-# Log file
+# IDE 相关文件
+.idea/
+.vscode/
+*.iml
+*.ipr
+*.iws
+.project
+.classpath
+.settings/
+.factorypath
+.springBeans
+.sts4-cache
+
+# Maven
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# Gradle
+.gradle/
+**/build/
+!src/**/build/
+gradle-app.setting
+!gradle-wrapper.jar
+!gradle-wrapper.properties
+.gradletasknamecache
+
+# Spring Boot
 *.log
+logs/
 
-# BlueJ files
+# Java
+*.class
+*.log
 *.ctxt
-
-# Mobile Tools for Java (J2ME)
 .mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
 *.nar
@@ -21,86 +55,165 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Mac
+.DS_Store
 
-### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
 
-# User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+# Linux
+*~
 
-# AWS User-specific
-.idea/**/aws.xml
+# 前端相关
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# Generated files
-.idea/**/contentModel.xml
-
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
-
-# Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
-
-# Gradle and Maven with auto-import
-# When using Gradle or Maven with auto-import, you should exclude module files,
-# since they will be recreated, and may cause churn.  Uncomment if using
-# auto-import.
-# .idea/artifacts
-# .idea/compiler.xml
-# .idea/jarRepositories.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-# *.iml
-# *.ipr
-
-# CMake
-cmake-build-*/
-
-# Mongo Explorer plugin
-.idea/**/mongoSettings.xml
-
-# File-based project format
-*.iws
-
-# IntelliJ
+# 构建输出
+dist/
+build/
+.nuxt/
+.next/
 out/
 
-# mpeltonen/sbt-idea plugin
-.idea_modules/
+# 缓存文件
+.cache/
+.parcel-cache/
 
-# JIRA plugin
-atlassian-ide-plugin.xml
+# 环境变量文件
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Cursive Clojure plugin
-.idea/replstate.xml
+# 编辑器和工具
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# SonarLint plugin
-.idea/sonarlint/
+# 测试覆盖率报告
+coverage/
+*.lcov
+.nyc_output/
 
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+# 依赖目录
+jspm_packages/
 
-# Editor-based Rest Client
-.idea/httpRequests
+# 可选的npm缓存目录
+.npm
 
-# Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
+# 可选的eslint缓存
+.eslintcache
 
+# 可选的REPL历史
+.node_repl_history
+
+# 输出的npm包
+*.tgz
+
+# Yarn完整性文件
+.yarn-integrity
+
+# parcel-bundler缓存
+.cache
+.parcel-cache
+
+# Storybook构建输出
+.out
+.storybook-out
+
+# 临时文件夹
+tmp/
+temp/
+
+# 日志文件
+logs/
+*.log
+
+# 运行时数据
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# 覆盖率目录
+lib-cov/
+coverage/
+.nyc_output/
+.grunt/
+
+# bower依赖目录
+bower_components/
+
+# node-waf配置
+.lock-wscript
+
+# 编译的二进制插件
+build/Release
+
+# 依赖目录
+jspm_packages/
+
+# TypeScript缓存
+*.tsbuildinfo
+
+# 可选的npm缓存目录
+.npm
+
+# 可选的eslint缓存
+.eslintcache
+
+# Microbundle缓存
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# 可选的REPL历史
+.node_repl_history
+
+# yarn包管理器
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+# 特定于项目的
+yu-rpc/*/target/
+yu-rpc/*/build/
+yu-rpc/*/out/
+yu-rpc/*/dist/
+yu-rpc/*/node_modules/
+yu-rpc/yu-rpc-admin/frontend/node_modules/
+yu-rpc/yu-rpc-admin/frontend/dist/
+yu-rpc/*/logs/
+*.log
+
+# 测试
+test-results/
+playwright-report/
+test-results.xml
+
+# 其他
+*.pid
+*.seed
+*.pid.lock
+.lock-wscript
